kustomize/metabase/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: metabase
  namespace: research-cloud
spec:
  stripPrefix:
    prefixes:
      - /metabase
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metabase-legacy
  namespace: research-cloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/metabase`)
      priority: 10
      services:
        - name: metabase
          port: 3000
      middlewares:
        - name: metabase
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metabase
  namespace: research-cloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`metabase.nghz.net`)
      priority: 10
      services:
        - name: metabase
          port: 3000
